<resources>
    <string name="app_name">Курс валют</string>
    <string name="privat_bank">Приват</string>
    <string name="mono_bank">Моно</string>
    <string name="nbu">НБУ</string>
    <string name="favorite">Обрані</string>
    <string name="favorite_border">favorite_border</string>
    <string name="work_in_progress">work in progress</string>
    <string name="currency_rate_in_privat_bank">Курс валют в ПриватБанку</string>
    <string name="currency_rate_in_mono_bank">Курс валют в МоноБанку</string>
    <string name="currency_rate_in_nbu">Курс валют в НБУ</string>
    <string name="currency_rate_favorites">Курс обраних валют в банках України</string>
    <string name="currency_full_name">Валюта</string>
    <string name="currency_short_name">USD</string>
    <string name="bay">Купівля</string>
    <string name="sale">Продаж</string>
    <string name="country_flag">country_flag</string>
    <string name="dollar_usa">Долар США</string>
    <string name="euro">Євро</string>
    <string name="bitcoin">Біткоїн</string>
    <string name="pound_sterling">Британський фунт</string>
    <string name="japanese_yen">Японська єна</string>
    <string name="swiss_franc">Швейцарський франк</string>
    <string name="yuan_renminbi">Китайський юань</string>
    <string name="aoe_dih">Дихрам ОАЕ</string>
    <string name="afgani">Афганський афгані</string>
    <string name="alb_lek">Албанський лек</string>
    <string name="virm_dram">Вірменський драм</string>
    <string name="ang_kvan">Ангольський кванза</string>
    <string name="arg_peso">Аргентинський песо</string>
    <string name="avstr_dol">Австралійський долар</string>
    <string name="azer_man">Азербайджанський манат</string>
    <string name="bang_taka">Бангладешський така</string>
    <string name="bolg_lev">Болгарський лев</string>
    <string name="bahr_din">Бахрейнський дінар</string>
    <string name="burun_fran">Бурундійський франк</string>
    <string name="brun_dol">Брунейський долар</string>
    <string name="boliv">Болівійський болівіано</string>
    <string name="braz_real">Бразильский реал</string>
    <string name="botsv_pul">Ботсванська пула</string>
    <string name="bilorus_rub">Білоруський рубль</string>
    <string name="canad_dol">Канадський долар</string>
    <string name="kongo_fran">Франк Конго</string>
    <string name="chili_peso">Чилійский песо</string>
    <string name="kolumb_peso">Колумбійський песо</string>
    <string name="kosta_rik_kol">Коста Ріканський колон</string>
    <string name="kuba_peso">Песо Куби</string>
    <string name="cheh_krona">Чеська крона</string>
    <string name="frank_jibut">Франк Джибуті</string>
    <string name="dania_krona">Данська крона</string>
    <string name="aljir_dinar">Алжирський дінар</string>
    <string name="egipt_funt">Єгипетський фунт</string>
    <string name="efiop_bir">Ефіопський бірр</string>
    <string name="gruzia_lari">Грузинський ларі</string>
    <string name="gana_sedi">Ганський седі</string>
    <string name="gambia_dalasi">Гамбійський даласі</string>
    <string name="gvinea_frank">Гвінейський франк</string>
    <string name="gonkong_dol">Долар Гонконгу</string>
    <string name="horvat_kuna">Хорватська куна</string>
    <string name="ugorsk_forin">Угорський форінт</string>
    <string name="indonez_rupia">Індонезійська рупія</string>
    <string name="izrail_shekel">Ізраїльський шекель</string>
    <string name="india_rupia">Індійська рупія</string>
    <string name="irak_dinar">Іракський дінар</string>
    <string name="iran_real">Іранський реал</string>
    <string name="island_krona">Ісландська крона</string>
    <string name="yordan_dinar">Йорданський дінар</string>
    <string name="kenia_shiling">Кенійський шилінг</string>
    <string name="kirgis_som">Киргистанський сом</string>
    <string name="kamboj_riel">Камбоджійський ріель</string>
    <string name="nord_korea_von">Північнокорейський вон</string>
    <string name="korea_von">Корейський вон</string>
    <string name="kuvejt_dinar">Кувейтський дінар</string>
    <string name="kazach_tenge">Казахстанський тенге</string>
    <string name="laos_kir">Лаоський кір</string>
    <string name="livan_funt">Ліванський фунт</string>
    <string name="rupia_shri_lanka">Рупія Шрі-Ланки</string>
    <string name="livia_dinar">Лівійський дінар</string>
    <string name="marokko_dichram">Марокканський діхрам</string>
    <string name="moldova_lei">Молдовський лей</string>
    <string name="madagaskar_ariari">Аріарі Мадагаскар</string>
    <string name="makedon_denar">Македонський денар</string>
    <string name="mongol_tugrik">Монгольский тугрик</string>
    <string name="mavritan_ugia">Мавританськая угія</string>
    <string name="mavrikia_rupia">Маврикійська рупія</string>
    <string name="malavia_kvacha">Малавійська квача</string>
    <string name="mexico_peso">Мексиканський песо</string>
    <string name="malazia_ringit">Малайзійський рингіт</string>
    <string name="mozambik_montikal">Мозамбікський монтікал</string>
    <string name="namibia_dolar">Намібійський долар</string>
    <string name="nigeria_naira">Нігерійська наіра</string>
    <string name="nikaragua_kord">Кордоба оро Нікарагуа</string>
    <string name="norveg_krona">Норвезька крона</string>
    <string name="nepal_rupia">Непальська рупія</string>
    <string name="novozeland_dolar">Новозеландський долар</string>
    <string name="oman_real">Оманський реал</string>
    <string name="peru_nuevo">Нуево соль Перу</string>
    <string name="filipin_peso">Філіпінський песо</string>
    <string name="pakistan_rupia">Пакистанська рупія</string>
    <string name="polska_zlot">Польський злотий</string>
    <string name="paragvaj_guarani">Парагвайський гуарані</string>
    <string name="katar_real">Катарський реал</string>
    <string name="rumunia_lei">Румунський лей</string>
    <string name="serbia_dinar">Сербський дінар</string>
    <string name="saudia_real">Саудівський реал</string>
    <string name="seishel_rupia">Сейшельська рупія</string>
    <string name="sudan_funt">Суданський фунт</string>
    <string name="swed_krona">Шведська крона</string>
    <string name="singapur_dolar">Сингапурський долар</string>
    <string name="sierra_leone">Сьєрра-Ліонський леоне</string>
    <string name="somali_shiling">Сомалійський шилінг</string>
    <string name="surinam_dolar">Сурінамський долар</string>
    <string name="siria_funt">Сирійський фунт</string>
    <string name="svazilend_lilang">Свазілендський лілангені</string>
    <string name="tailand_bat">Тайський бат</string>
    <string name="tadjik_somoni">Таджикістанський сомоні</string>
    <string name="turkmen_manat">Туркменський манат</string>
    <string name="tunis_dinar">Туніський дінар</string>
    <string name="turkish_lira">Турецька ліра</string>
    <string name="taivan_dolar">Новий Тайванський долар</string>
    <string name="tanzania_shiling">Танзанійський шилінг</string>
    <string name="uganda_shiling">Угандський шилінг</string>
    <string name="uragvai_peso">Уругвайський песо</string>
    <string name="uzbek_sum">Узбекський сум</string>
    <string name="venesuel_bolivar">Венесуельський болівар</string>
    <string name="vietnam_dong">Вьетнамський донг</string>
    <string name="afric_frank1">Західноафриканський франк Камерун</string>
    <string name="afric_frank2">Західноафриканський франк Сенегал</string>
    <string name="emen_real">Єменський реал</string>
    <string name="lesotto_rand">Ранд Лесотто</string>
    <string name="zambia_kvacha">Замбійська квача</string>
    <string name="rus_rub">Російський рубль</string>
    <string name="spz">СПЗ(спеціальні права запозичення)</string>
    <string name="dominikana_peso">Домініканське песо</string>
    <string name="turkmen_new_manat">Туркменський новий манат</string>
    <string name="gold">Золото</string>
    <string name="silver">Срібло</string>
    <string name="platina">Платина</string>
    <string name="paladij">Паладій</string>
    <string name="any_currency">якась валюта</string>

</resources>