<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/currency_rate_view_holder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/indent_8dp"
    app:strokeColor="@color/gray"
    app:strokeWidth="@dimen/indent_1dp"
    app:cardCornerRadius="@dimen/indent_4dp"
    app:cardElevation="@dimen/indent_4dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@drawable/separator"
        android:orientation="horizontal"
        android:gravity="center"
        android:showDividers="middle">

        <ImageView
            android:id="@+id/country_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/indent_4dp"
            android:contentDescription="@string/country_flag"
            app:srcCompat="@drawable/us" />

        <TextView
            android:id="@+id/currency_short_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/indent_4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/currency_short_name" />

        <TextView
            android:id="@+id/currency_full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/indent_4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/currency_full_name" />

        <TextView
            android:id="@+id/buying_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/indent_4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/bay" />

        <TextView
            android:id="@+id/selling_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/indent_4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sale" />



    </LinearLayout>


</com.google.android.material.card.MaterialCardView>